# looper-emulator

./: LICENSE  README.md  gui_classes.py  lem.py  main.py  pyproject.toml
lib/: abstract_lem_app.py  constants.py  gui_classes.py  lem.py  lem_app.py  main.py  tracks.py  utils.py
